--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,7 +2,7 @@ name: monitor
 
 on:
   schedule:
-    - cron: '5,10,15,20,25,30,35,40,45,50,55,60 * * * *'
+    - cron: '*/2 * * * *'
 
 jobs:
   tesnet_bridger_roller_monitor:
